--- a/notebooks_working/EOStat/in_situ_senegal.ipynb
+++ b/notebooks_working/EOStat/in_situ_senegal.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "crop_dictionary_xlsx  = f'/export/projects/Sen4Stat/WORK/LUT/crop_dictionary_new.xlsx'\n",
     "\n",
     "\n",
-    "shp_path = '/export/projects/FAO-EOStat-Senegal/shp_temp_4/'\n"
+    "shp_path = '/export/projects/FAO-EOStat-Senegal/shp_temp_5/'\n"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "4          5      Coton    1921                          Cotton"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5111,7 +5111,7 @@
        "4         00.01:34:51  Enqueteurnior3  only in using data  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5131,7 +5131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5220,7 +5220,7 @@
        "4    622020673414    1421  Groundnuts   9156.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5439,7 +5439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -5547,7 +5547,7 @@
        "4  POLYGON ((400791.850 1532870.364, 400815.855 1...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5634,7 +5634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5729,7 +5729,7 @@
        "4  POLYGON ((437196.697 1503108.915, 437209.481 1...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5808,7 +5808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5912,7 +5912,7 @@
        "6  POLYGON ((429800.703 1515346.022, 429798.793 1...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6362,7 +6362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -6395,6 +6395,7 @@
        "      <th></th>\n",
        "      <th>sub_nb</th>\n",
        "      <th>area_db</th>\n",
+       "      <th>from</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -6403,30 +6404,35 @@
        "      <th>0</th>\n",
        "      <td>8111</td>\n",
        "      <td>29156.17</td>\n",
+       "      <td>UCLouvain</td>\n",
        "      <td>POLYGON ((385695.993 1533232.404, 385673.129 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>9211</td>\n",
        "      <td>1598386.71</td>\n",
+       "      <td>UCLouvain</td>\n",
        "      <td>POLYGON ((381966.171 1502897.884, 381763.940 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>9212</td>\n",
        "      <td>31945.28</td>\n",
+       "      <td>UCLouvain</td>\n",
        "      <td>POLYGON ((381949.188 1505053.581, 382008.156 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>9212</td>\n",
        "      <td>864139.88</td>\n",
+       "      <td>UCLouvain</td>\n",
        "      <td>POLYGON ((426376.836 1513895.848, 425818.706 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>6999</td>\n",
        "      <td>10510.04</td>\n",
+       "      <td>UCLouvain</td>\n",
        "      <td>POLYGON ((386562.660 1533614.206, 386463.612 1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -6434,15 +6440,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   sub_nb     area_db                                           geometry\n",
-       "0    8111    29156.17  POLYGON ((385695.993 1533232.404, 385673.129 1...\n",
-       "1    9211  1598386.71  POLYGON ((381966.171 1502897.884, 381763.940 1...\n",
-       "2    9212    31945.28  POLYGON ((381949.188 1505053.581, 382008.156 1...\n",
-       "3    9212   864139.88  POLYGON ((426376.836 1513895.848, 425818.706 1...\n",
-       "4    6999    10510.04  POLYGON ((386562.660 1533614.206, 386463.612 1..."
+       "   sub_nb     area_db       from  \\\n",
+       "0    8111    29156.17  UCLouvain   \n",
+       "1    9211  1598386.71  UCLouvain   \n",
+       "2    9212    31945.28  UCLouvain   \n",
+       "3    9212   864139.88  UCLouvain   \n",
+       "4    6999    10510.04  UCLouvain   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((385695.993 1533232.404, 385673.129 1...  \n",
+       "1  POLYGON ((381966.171 1502897.884, 381763.940 1...  \n",
+       "2  POLYGON ((381949.188 1505053.581, 382008.156 1...  \n",
+       "3  POLYGON ((426376.836 1513895.848, 425818.706 1...  \n",
+       "4  POLYGON ((386562.660 1533614.206, 386463.612 1...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6450,11 +6463,21 @@
    "source": [
     "non_crop_gdf = gpd.read_file(f'{path}SHP_NON_CROP/all_non_crop.shp')\n",
     "\n",
+    "\n",
+    "non_crop_gdf.loc[non_crop_gdf['layer'] == 'odk_non_crop_with_data_QC', 'layer'] = 'ODK'\n",
+    "non_crop_gdf.loc[non_crop_gdf['layer'] == 'lox_nc_data_buf_QC_1', 'layer'] = 'UCLouvain'\n",
+    "\n",
+    "non_crop_gdf = non_crop_gdf.rename(columns={\"layer\": \"from\"})\n",
+    "\n",
+    "\n",
     "non_crop_gdf['area_db'] = non_crop_gdf['geometry'].area.round(2)\n",
     "\n",
-    "non_crop_gdf = non_crop_gdf[['sub_nb','area_db','geometry']]\n",
+    "non_crop_gdf = non_crop_gdf[['sub_nb','area_db','from','geometry']]\n",
     "\n",
     "print(f'There are {len(non_crop_gdf)} polygons obtained by ODK & Sophie Lox and cleaned by Sophie Bontemps')\n",
+    "\n",
+    "non_crop_gdf.to_file(f'{shp_path}odk_ucl_non_crop_data.shp')\n",
+    "\n",
     "\n",
     "non_crop_gdf.head()"
    ]
@@ -6468,7 +6491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -6501,6 +6524,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id_gps</th>\n",
+       "      <th>id_odk</th>\n",
        "      <th>sub_nb</th>\n",
        "      <th>area_db</th>\n",
        "      <th>geometry</th>\n",
@@ -6509,30 +6534,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>6.220102e+10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1421</td>\n",
        "      <td>8901.4</td>\n",
        "      <td>POLYGON ((429457.856 1516229.002, 429465.169 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>6.220102e+10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1181</td>\n",
        "      <td>17754.0</td>\n",
        "      <td>POLYGON ((429828.180 1516150.340, 429839.170 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>6.220102e+10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1181</td>\n",
        "      <td>9874.2</td>\n",
        "      <td>POLYGON ((429883.899 1516457.550, 429884.205 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>6.220102e+10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>5311.7</td>\n",
        "      <td>POLYGON ((429986.736 1516281.999, 429987.433 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>6.220202e+10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>5609.8</td>\n",
        "      <td>POLYGON ((400791.850 1532870.364, 400815.855 1...</td>\n",
@@ -6542,15 +6577,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   sub_nb  area_db                                           geometry\n",
-       "0    1421   8901.4  POLYGON ((429457.856 1516229.002, 429465.169 1...\n",
-       "1    1181  17754.0  POLYGON ((429828.180 1516150.340, 429839.170 1...\n",
-       "2    1181   9874.2  POLYGON ((429883.899 1516457.550, 429884.205 1...\n",
-       "3    1121   5311.7  POLYGON ((429986.736 1516281.999, 429987.433 1...\n",
-       "4    1121   5609.8  POLYGON ((400791.850 1532870.364, 400815.855 1..."
+       "         id_gps  id_odk  sub_nb  area_db  \\\n",
+       "0  6.220102e+10     NaN    1421   8901.4   \n",
+       "1  6.220102e+10     NaN    1181  17754.0   \n",
+       "2  6.220102e+10     NaN    1181   9874.2   \n",
+       "3  6.220102e+10     NaN    1121   5311.7   \n",
+       "4  6.220202e+10     NaN    1121   5609.8   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((429457.856 1516229.002, 429465.169 1...  \n",
+       "1  POLYGON ((429828.180 1516150.340, 429839.170 1...  \n",
+       "2  POLYGON ((429883.899 1516457.550, 429884.205 1...  \n",
+       "3  POLYGON ((429986.736 1516281.999, 429987.433 1...  \n",
+       "4  POLYGON ((400791.850 1532870.364, 400815.855 1...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6580,7 +6622,7 @@
     "\n",
     "#crop_gdf['id'] = np.arange(len(crop_gdf))\n",
     "\n",
-    "crop_gdf = crop_gdf[['sub_nb','area_db','geometry']]\n",
+    "crop_gdf = crop_gdf[['id_gps','id_odk','sub_nb','area_db','geometry']]\n",
     "\n",
     "\n",
     "print(f'There are {len(crop_gdf)} cropland polygons from GPS and completed by ODK')\n",
@@ -6599,7 +6641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -6633,6 +6675,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>id_gps</th>\n",
+       "      <th>id_odk</th>\n",
        "      <th>sub_nb</th>\n",
        "      <th>area_db</th>\n",
        "      <th>geometry</th>\n",
@@ -6642,6 +6686,8 @@
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>0</td>\n",
+       "      <td>6.220204e+11</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>15283.0</td>\n",
        "      <td>POLYGON ((401594.999 1518649.411, 401592.870 1...</td>\n",
@@ -6649,6 +6695,8 @@
        "    <tr>\n",
        "      <th>102</th>\n",
        "      <td>1</td>\n",
+       "      <td>6.220205e+11</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>7347.0</td>\n",
        "      <td>POLYGON ((425629.754 1515387.877, 425632.729 1...</td>\n",
@@ -6656,6 +6704,8 @@
        "    <tr>\n",
        "      <th>212</th>\n",
        "      <td>2</td>\n",
+       "      <td>6.220103e+12</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>11967.0</td>\n",
        "      <td>POLYGON ((448767.618 1511056.508, 448766.858 1...</td>\n",
@@ -6663,6 +6713,8 @@
        "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>3</td>\n",
+       "      <td>6.220205e+11</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>3352.7</td>\n",
        "      <td>POLYGON ((425774.240 1515014.511, 425782.294 1...</td>\n",
@@ -6670,6 +6722,8 @@
        "    <tr>\n",
        "      <th>161</th>\n",
        "      <td>4</td>\n",
+       "      <td>6.220101e+12</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1121</td>\n",
        "      <td>7174.8</td>\n",
        "      <td>POLYGON ((433388.702 1520054.127, 433395.673 1...</td>\n",
@@ -6679,15 +6733,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     id  sub_nb  area_db                                           geometry\n",
-       "74    0    1121  15283.0  POLYGON ((401594.999 1518649.411, 401592.870 1...\n",
-       "102   1    1121   7347.0  POLYGON ((425629.754 1515387.877, 425632.729 1...\n",
-       "212   2    1121  11967.0  POLYGON ((448767.618 1511056.508, 448766.858 1...\n",
-       "100   3    1121   3352.7  POLYGON ((425774.240 1515014.511, 425782.294 1...\n",
-       "161   4    1121   7174.8  POLYGON ((433388.702 1520054.127, 433395.673 1..."
+       "     id        id_gps  id_odk  sub_nb  area_db  \\\n",
+       "74    0  6.220204e+11     NaN    1121  15283.0   \n",
+       "102   1  6.220205e+11     NaN    1121   7347.0   \n",
+       "212   2  6.220103e+12     NaN    1121  11967.0   \n",
+       "100   3  6.220205e+11     NaN    1121   3352.7   \n",
+       "161   4  6.220101e+12     NaN    1121   7174.8   \n",
+       "\n",
+       "                                              geometry  \n",
+       "74   POLYGON ((401594.999 1518649.411, 401592.870 1...  \n",
+       "102  POLYGON ((425629.754 1515387.877, 425632.729 1...  \n",
+       "212  POLYGON ((448767.618 1511056.508, 448766.858 1...  \n",
+       "100  POLYGON ((425774.240 1515014.511, 425782.294 1...  \n",
+       "161  POLYGON ((433388.702 1520054.127, 433395.673 1...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6701,11 +6762,13 @@
     "\n",
     "final_gdf['id'] = np.arange(len(final_gdf))\n",
     "\n",
-    "final_gdf = final_gdf[['id','sub_nb','area_db','geometry']]\n",
+    "final_gdf = final_gdf[['id','id_gps','id_odk','sub_nb','area_db','geometry']]\n",
     "\n",
-    "final_gdf.to_file('/export/projects/Sen4Stat/WORK/IN_SITU/SITE_41/SEN_2021_SITE_41_ori.shp')\n",
+    "#final_gdf.to_file('/export/projects/Sen4Stat/WORK/IN_SITU/SITE_41/SEN_2021_SITE_41_ori.shp')\n",
     "\n",
-    "final_gdf.to_file(f'{shp_path}SEN_2021_SITE_41_ori.shp')\n",
+    "#final_gdf.to_file(f'{shp_path}SEN_2021_SITE_41_ori.shp')\n",
+    "\n",
+    "final_gdf.to_file(f'{shp_path}gps_odk_ucl_in_situ_nioro_final.shp')\n",
     "\n",
     "\n",
     "print(f'There are {len(final_gdf)} polygons from GPS and completed by ODK and Sophie')\n",
