--- a/notebooks_working/Sen4Stat/count_frequency_pixels.ipynb
+++ b/notebooks_working/Sen4Stat/count_frequency_pixels.ipynb
@@ -620,18 +620,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f783c006828>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+init=epsg:32630\n"
+     ]
     },
     {
      "data": {
@@ -653,8 +650,18 @@
     "\n",
     "rasterio.plot.show(src, cmap='tab20', ax=ax)\n",
     "\n",
-    "gdf.plot(facecolor='none', edgecolor='black',ax=ax)\n"
+    "gdf.plot(facecolor='none', edgecolor='black',ax=ax)\n",
+    "\n",
+    "\n",
+    "print(src.crs)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -667,7 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_rename = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -680,35 +696,35 @@
     {
      "data": {
       "text/plain": [
-       "[{'2 - Perennial crops': 367,\n",
-       "  '3 - Non cropland': 19558,\n",
-       "  '17 - Leguminous crops': 8141,\n",
-       "  '111 - Wheat': 105397,\n",
-       "  '115 - Barley': 83964,\n",
-       "  '116 - Rye': 1872,\n",
-       "  '117 - Oats': 351,\n",
-       "  '143 - Other oilseed crops': 10962,\n",
-       "  '151 - Potatoes': 6275,\n",
-       "  '181 - Sugar beet': 9833,\n",
-       "  '1941 - Flowers crops': 24067,\n",
+       "[{2: 367,\n",
+       "  3: 19558,\n",
+       "  17: 8141,\n",
+       "  111: 105397,\n",
+       "  115: 83964,\n",
+       "  116: 1872,\n",
+       "  117: 351,\n",
+       "  143: 10962,\n",
+       "  151: 6275,\n",
+       "  181: 9833,\n",
+       "  1941: 24067,\n",
        "  'name': 'Segovia'},\n",
-       " {'2 - Perennial crops': 852633,\n",
-       "  '3 - Non cropland': 9593619,\n",
-       "  '17 - Leguminous crops': 6466214,\n",
-       "  '111 - Wheat': 11512555,\n",
-       "  '112 - Maize': 218082,\n",
-       "  '115 - Barley': 8941947,\n",
-       "  '116 - Rye': 18961,\n",
-       "  '117 - Oats': 1064761,\n",
-       "  '121 - Leafy or stem vegetables': 938,\n",
-       "  '143 - Other oilseed crops': 3508301,\n",
-       "  '151 - Potatoes': 18719,\n",
-       "  '181 - Sugar beet': 225352,\n",
-       "  '1941 - Flowers crops': 1938831,\n",
+       " {2: 852633,\n",
+       "  3: 9593619,\n",
+       "  17: 6466214,\n",
+       "  111: 11512555,\n",
+       "  112: 218082,\n",
+       "  115: 8941947,\n",
+       "  116: 18961,\n",
+       "  117: 1064761,\n",
+       "  121: 938,\n",
+       "  143: 3508301,\n",
+       "  151: 18719,\n",
+       "  181: 225352,\n",
+       "  1941: 1938831,\n",
        "  'name': 'Palencia'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -767,19 +783,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>2 - Perennial crops</th>\n",
-       "      <th>3 - Non cropland</th>\n",
-       "      <th>17 - Leguminous crops</th>\n",
-       "      <th>111 - Wheat</th>\n",
-       "      <th>115 - Barley</th>\n",
-       "      <th>116 - Rye</th>\n",
-       "      <th>117 - Oats</th>\n",
-       "      <th>143 - Other oilseed crops</th>\n",
-       "      <th>151 - Potatoes</th>\n",
-       "      <th>181 - Sugar beet</th>\n",
-       "      <th>1941 - Flowers crops</th>\n",
-       "      <th>112 - Maize</th>\n",
-       "      <th>121 - Leafy or stem vegetables</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>17</th>\n",
+       "      <th>111</th>\n",
+       "      <th>115</th>\n",
+       "      <th>116</th>\n",
+       "      <th>117</th>\n",
+       "      <th>143</th>\n",
+       "      <th>151</th>\n",
+       "      <th>181</th>\n",
+       "      <th>1941</th>\n",
+       "      <th>112</th>\n",
+       "      <th>121</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>name</th>\n",
@@ -900,44 +916,26 @@
        "</div>"
       ],
       "text/plain": [
-       "            2 - Perennial crops  3 - Non cropland  17 - Leguminous crops  \\\n",
-       "name                                                                       \n",
-       "Segovia                     367             19558                   8141   \n",
-       "Palencia                 852633           9593619                6466214   \n",
-       "León                    1763633          19382296                1550340   \n",
-       "Burgos                   190146            682304                 654213   \n",
-       "Zamora                  1940236          49466612                2870245   \n",
-       "Valladolid              1445032          16266928                7302579   \n",
+       "               2         3        17        111       115     116      117   \\\n",
+       "name                                                                          \n",
+       "Segovia         367     19558     8141    105397     83964    1872      351   \n",
+       "Palencia     852633   9593619  6466214  11512555   8941947   18961  1064761   \n",
+       "León        1763633  19382296  1550340   4620375   1078976   47260  1474835   \n",
+       "Burgos       190146    682304   654213   1793635    681317     723    37001   \n",
+       "Zamora      1940236  49466612  2870245   6644743   5306312  258978  1873444   \n",
+       "Valladolid  1445032  16266928  7302579   8995026  15325611   82278   567749   \n",
        "\n",
-       "            111 - Wheat  115 - Barley  116 - Rye  117 - Oats  \\\n",
-       "name                                                           \n",
-       "Segovia          105397         83964       1872         351   \n",
-       "Palencia       11512555       8941947      18961     1064761   \n",
-       "León            4620375       1078976      47260     1474835   \n",
-       "Burgos          1793635        681317        723       37001   \n",
-       "Zamora          6644743       5306312     258978     1873444   \n",
-       "Valladolid      8995026      15325611      82278      567749   \n",
-       "\n",
-       "            143 - Other oilseed crops  151 - Potatoes  181 - Sugar beet  \\\n",
-       "name                                                                      \n",
-       "Segovia                         10962            6275              9833   \n",
-       "Palencia                      3508301           18719            225352   \n",
-       "León                          1075386          103195            519871   \n",
-       "Burgos                         428865             160             21661   \n",
-       "Zamora                        2456774           27670            191773   \n",
-       "Valladolid                    4231382          173002            557587   \n",
-       "\n",
-       "            1941 - Flowers crops  112 - Maize  121 - Leafy or stem vegetables  \n",
-       "name                                                                           \n",
-       "Segovia                    24067          NaN                             NaN  \n",
-       "Palencia                 1938831     218082.0                           938.0  \n",
-       "León                     1824169    4391868.0                           625.0  \n",
-       "Burgos                    205473       8414.0                            11.0  \n",
-       "Zamora                   2780317    1142384.0                          2889.0  \n",
-       "Valladolid               3065300     301254.0                         19946.0  "
+       "               143     151     181      1941       112      121   \n",
+       "name                                                              \n",
+       "Segovia       10962    6275    9833    24067        NaN      NaN  \n",
+       "Palencia    3508301   18719  225352  1938831   218082.0    938.0  \n",
+       "León        1075386  103195  519871  1824169  4391868.0    625.0  \n",
+       "Burgos       428865     160   21661   205473     8414.0     11.0  \n",
+       "Zamora      2456774   27670  191773  2780317  1142384.0   2889.0  \n",
+       "Valladolid  4231382  173002  557587  3065300   301254.0  19946.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
