--- a/notebooks/2_EO_data_download/download_images.ipynb
+++ b/notebooks/2_EO_data_download/download_images.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Download images with `sentinelsat`\n",
     "\n",
@@ -10,12 +11,21 @@
     "\n",
     "`sentinelsat` makes searching, downloading and retrieving the metadata of Sentinel satellite images from the Copernicus Open Access Hub easy.\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentinelsat : 1.0.1\n"
+     ]
+    }
+   ],
    "source": [
     "import sentinelsat\n",
     "from sentinelsat import SentinelAPI, read_geojson, geojson_to_wkt\n",
@@ -26,28 +36,20 @@
     "from IPython.display import display\n",
     "\n",
     "print(f'sentinelsat : {sentinelsat.__version__}')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "sentinelsat : 1.0.1\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set directory"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
     "grp_letter    = 'N'\n",
@@ -58,20 +60,30 @@
     "roi_path = f'{work_path}ROI/'\n",
     "\n",
     "Path(roi_path).mkdir(parents=True, exist_ok=True)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set Region of Interest"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROI file : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n",
+      "Old CRS : epsg:32631\n",
+      "New CRS : epsg:4326\n"
+     ]
+    }
+   ],
    "source": [
     "roi_file      = f'{roi_path}extent_roi_32631.shp'\n",
     "roi_file_json = f'{roi_path}extent_roi_4326.geojson'\n",
@@ -93,34 +105,24 @@
     "# Write ROI file in GeoJSON format\n",
     "\n",
     "roi_gdf.to_file(roi_file_json,  driver='GeoJSON')\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "ROI file : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n",
-      "Old CRS : epsg:32631\n",
-      "New CRS : epsg:4326\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Authentification\n",
     "\n",
     "The Copernicus Open Access Hub and probably most Data Hubs require authentication.\n",
     "\n",
     "You can provide your credentials with **SentinelAPI(your username , your password)**\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "user     = 'ndeffense'\n",
     "password = 'lbrat2104'\n",
@@ -128,24 +130,24 @@
     "# Connect to the API\n",
     "\n",
     "api = SentinelAPI(user, password)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Sorting & Filtering\n",
     "\n",
     "In addition to the *search query keywords* sentinelsat allows filtering and sorting of search results before download. To simplify these operations sentinelsat offers the convenience functions `to_geojson()`, `to_dataframe()` and `to_geodataframe()` which return the search results as a GeoJSON object, Pandas DataFrame or a GeoPandas GeoDataFrame, respectively. `to_dataframe()` and `to_geodataframe()` require pandas and geopandas to be installed, respectively.\n",
     "\n",
     "In this example we query Sentinel-2 scenes over a location and convert the query results to a Pandas DataFrame. The DataFrame is then sorted by cloud cover and ingestion date. We limit the query to first 5 results within our timespan and download them, starting with the least cloudy scene. Filtering can be done with all data types, as long as you pass the id to the download function."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "start_date    = date(2018, 8, 25)\n",
     "end_date      = date(2018, 8, 27)\n",
@@ -162,53 +164,14 @@
     "\n",
     "# Sentinel-1\n",
     "polarisation_mode =  'VV VH'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "source": [
-    "# Search by polygon, time, and SciHub query keywords\n",
-    "\n",
-    "footprint = geojson_to_wkt(read_geojson(roi_file_json))\n",
-    "\n",
-    "if platform_name == 'Sentinel-2':\n",
-    "\n",
-    "    products = api.query(footprint,\n",
-    "                        date = dates,\n",
-    "                        platformname = platform_name,\n",
-    "                        processinglevel = s2_level,\n",
-    "                        producttype = product_type,\n",
-    "                        cloudcoverpercentage = cloud_cover)\n",
-    "\n",
-    "\n",
-    "# convert to Pandas DataFrame\n",
-    "products_df = api.to_dataframe(products)\n",
-    "\n",
-    "# sort and limit to first 5 sorted products\n",
-    "\n",
-    "products_df_sorted = products_df.sort_values(['cloudcoverpercentage', 'ingestiondate'], ascending=[True, True])\n",
-    "#products_df_sorted = products_df_sorted[['cloudcoverpercentage','ingestiondate']]\n",
-    "\n",
-    "products_df = products_df[products_df['title'].str.contains(s2_tile)]\n",
-    "\n",
-    "#display(products_df_sorted.columns)\n",
-    "\n",
-    "\n",
-    "display(products_df)\n",
-    "\n",
-    "\n",
-    "#products_df_sorted = products_df_sorted[0:1][0:1]\n",
-    "\n",
-    "products_df_sorted = products_df_sorted[0:1]['filename']\n",
-    "\n",
-    "print(products_df_sorted)\n"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<div>\n",
@@ -337,53 +300,92 @@
        "[1 rows x 36 columns]"
       ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "71fb445a-3f76-4ff1-a819-4ea4452dfaeb    S2A_MSIL1C_20180826T104021_N0206_R008_T31UES_2...\n",
       "Name: filename, dtype: object\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Search by polygon, time, and SciHub query keywords\n",
+    "\n",
+    "footprint = geojson_to_wkt(read_geojson(roi_file_json))\n",
+    "\n",
+    "if platform_name == 'Sentinel-2':\n",
+    "\n",
+    "    products = api.query(footprint,\n",
+    "                        date = dates,\n",
+    "                        platformname = platform_name,\n",
+    "                        processinglevel = s2_level,\n",
+    "                        producttype = product_type,\n",
+    "                        cloudcoverpercentage = cloud_cover)\n",
+    "\n",
+    "\n",
+    "# convert to Pandas DataFrame\n",
+    "products_df = api.to_dataframe(products)\n",
+    "\n",
+    "# sort and limit to first 5 sorted products\n",
+    "\n",
+    "products_df_sorted = products_df.sort_values(['cloudcoverpercentage', 'ingestiondate'], ascending=[True, True])\n",
+    "#products_df_sorted = products_df_sorted[['cloudcoverpercentage','ingestiondate']]\n",
+    "\n",
+    "products_df = products_df[products_df['title'].str.contains(s2_tile)]\n",
+    "\n",
+    "#display(products_df_sorted.columns)\n",
+    "\n",
+    "\n",
+    "display(products_df)\n",
+    "\n",
+    "\n",
+    "#products_df_sorted = products_df_sorted[0:1][0:1]\n",
+    "\n",
+    "products_df_sorted = products_df_sorted[0:1]['filename']\n",
+    "\n",
+    "print(products_df_sorted)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching archival status: 100%|██████████| 1/1 [00:00<00:00,  1.11 products/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ResultTuple(downloaded={}, retrieval_triggered={'71fb445a-3f76-4ff1-a819-4ea4452dfaeb': {'id': '71fb445a-3f76-4ff1-a819-4ea4452dfaeb', 'title': 'S2A_MSIL1C_20180826T104021_N0206_R008_T31UES_20180826T125219', 'size': 174376297, 'md5': '42EF146D051F399B970CBE6EDA6481C9', 'date': datetime.datetime(2018, 8, 26, 10, 40, 21, 24000), 'footprint': 'POLYGON((4.066065964389006 50.45671446498236,4.097963501108383 50.53670821564332,4.156231340156582 50.68263118874896,4.214817201303932 50.82849148370492,4.273792905856817 50.974334620142365,4.333128373837741 51.12016825845845,4.392764835675447 51.266066533716206,4.453096478039404 51.41195894441646,4.465299057889804 51.44131066874662,4.579544021469633 51.44054116582309,4.546436441462649 50.453523278919015,4.066065964389006 50.45671446498236))', 'url': \"https://apihub.copernicus.eu/apihub/odata/v1/Products('71fb445a-3f76-4ff1-a819-4ea4452dfaeb')/$value\", 'Online': False, 'Creation Date': datetime.datetime(2018, 8, 26, 16, 48, 38, 842000), 'Ingestion Date': datetime.datetime(2018, 8, 26, 16, 45, 13, 443000), 'quicklook_url': \"https://apihub.copernicus.eu/apihub/odata/v1/Products('71fb445a-3f76-4ff1-a819-4ea4452dfaeb')/Products('Quicklook')/$value\"}}, failed={})"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# download sorted and reduced products\n",
     "\n",
     "api.download_all(products_df_sorted.index)\n",
     "\n",
     "#api.download_all(['96b88d4d-216d-4451-a7f5-038296e58034\t'])"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Fetching archival status: 100%|██████████| 1/1 [00:00<00:00,  1.11 products/s]\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "ResultTuple(downloaded={}, retrieval_triggered={'71fb445a-3f76-4ff1-a819-4ea4452dfaeb': {'id': '71fb445a-3f76-4ff1-a819-4ea4452dfaeb', 'title': 'S2A_MSIL1C_20180826T104021_N0206_R008_T31UES_20180826T125219', 'size': 174376297, 'md5': '42EF146D051F399B970CBE6EDA6481C9', 'date': datetime.datetime(2018, 8, 26, 10, 40, 21, 24000), 'footprint': 'POLYGON((4.066065964389006 50.45671446498236,4.097963501108383 50.53670821564332,4.156231340156582 50.68263118874896,4.214817201303932 50.82849148370492,4.273792905856817 50.974334620142365,4.333128373837741 51.12016825845845,4.392764835675447 51.266066533716206,4.453096478039404 51.41195894441646,4.465299057889804 51.44131066874662,4.579544021469633 51.44054116582309,4.546436441462649 50.453523278919015,4.066065964389006 50.45671446498236))', 'url': \"https://apihub.copernicus.eu/apihub/odata/v1/Products('71fb445a-3f76-4ff1-a819-4ea4452dfaeb')/$value\", 'Online': False, 'Creation Date': datetime.datetime(2018, 8, 26, 16, 48, 38, 842000), 'Ingestion Date': datetime.datetime(2018, 8, 26, 16, 45, 13, 443000), 'quicklook_url': \"https://apihub.copernicus.eu/apihub/odata/v1/Products('71fb445a-3f76-4ff1-a819-4ea4452dfaeb')/Products('Quicklook')/$value\"}}, failed={})"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "footprint = geojson_to_wkt(read_geojson('search_polygon.geojson'))\n",
     "\n",
@@ -393,13 +395,21 @@
     "                     limit=10)\n",
     "\n",
     "api.download_all(products)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict()\n"
+     ]
+    }
+   ],
    "source": [
     "tiles = ['33VUC', '33UUB']\n",
     "\n",
@@ -416,47 +426,30 @@
     "    products.update(pp)\n",
     "\n",
     "print(products)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "OrderedDict()\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.6.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
-  },
-  "interpreter": {
-   "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
