--- a/notebooks/4_Sentinel_2_preprocessing/sentinel_2_prepro.ipynb
+++ b/notebooks/4_Sentinel_2_preprocessing/sentinel_2_prepro.ipynb
@@ -58,10 +58,6 @@
     "roi_path = f'{work_path}ROI/'\n",
     "dwl_path = f'{work_path}DOWNLOAD/'\n",
     "\n",
-    " \n",
-    "ROI_file = f'{work_path}ROI/extent_roi_32631.shp'\n",
-    "#ROI_file = f'{work_path}ROI/extent_roi_32736.shp'\n",
-    "\n",
     "\n",
     "# For each step of the preprocessing,\n",
     "# a folder will be created to store \n",
@@ -413,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check where the ROI is located in one of the image to clip"
+    "**Check where the ROI is located in one of the image to clip**"
    ]
   },
   {
@@ -509,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if clipped image is located inside the ROI"
+    "**Check if clipped image is located inside the ROI**"
    ]
   },
   {
@@ -675,7 +671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if the SCL was correctly applied"
+    "**Check if the SCL was correctly applied**"
    ]
   },
   {
