--- a/notebooks/6_Spectral_indices/spectral_indices.ipynb
+++ b/notebooks/6_Spectral_indices/spectral_indices.ipynb
@@ -1,97 +1,22 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "# Compute Spectral indices\n",
-    "\n",
-    "## NDVI - Normalized Difference Vegetation Index\n",
-    "\n",
-    "NDVI is used to outline the presence of vegetation. It is used to indicate relative density, or the amount, of the green vegetation present in the image. This index uses reflectance from a red band around 0.66 μm and a near-Infrared band around 0.86 μm. The red band is found in the absorption region of the chlorophyll, while the near-IR band is used in high reflectance plateau of the vegetation canopies. These two bands sense different depths over the vegetation canopies.\n",
-    "\n",
-    "$$ NDVI = \\frac{NIR - RED}{NIR + RED} = \\frac{B08 - B04}{B08 + B04}$$\n",
-    "\n",
-    "## NDWI - Normalized Difference Water Index\n",
-    "\n",
-    "NDWI concept as formulated by Gao combining reflectance of NIR and SWIR has a wide range of application. It can be used for exploring water content at single leaf level as well as canopy/satellite level. The range of application of NDWI spreads from agricultural monitoring for crop irrigation and pasture management to forest monitoring for assessing fire risk and live fuel moisture particularly relevant in the context of climate change.\n",
-    "\n",
-    "$$ NDWI = \\frac{NIR - SWIR}{NIR + SWIR} = \\frac{B08 - B11}{B08 + B11}$$\n",
-    "\n",
-    "## NDSI - Normalized Difference Snow Index\n",
-    "\n",
-    "NDSI is used to delineate the presence of snow/ice. It is a standardized ratio of the difference in the reflectance in the bands that take advantage of unique signature and the spectral difference to indicate snow from the surrounding features and even clouds.\n",
-    "\n",
-    "$$ NDSI = \\frac{GREEN - SWIR}{GREEN + SWIR} = \\frac{B03 - B11}{B03 + B11}$$\n",
-    "\n",
-    "## NBR - Normalized Burn Ratio\n",
-    "\n",
-    "To detect burned areas, the NBR index is the most appropriate choice. Using bands 8 and 12 it highlights burnt areas in large fire zones greater than 500 acres. To observe burn severity, you may subtract the post-fire NBR image from the pre-fire NBR image.\n",
-    "\n",
-    "The NIR and SWIR parts of the electromagnetic spectrum are a powerful combination of bands to use for this index given vegetation reflects strongly in the NIR region of the electromagnetic spectrum and weekly in the SWIR. Alternatively, it has been shown that a fire scar which contains scarred woody vegetation and earth will reflect more strongly in the SWIR part of the electromagnetic spectrum and beyond (see figure below).\n",
-    "\n",
-    "$$ NBR = \\frac{NIR - SWIR}{NIR + SWIR} = \\frac{B08 - B12}{B08 + B12}$$\n",
-    "\n",
-    "\n",
-    "For a given area, NBR is calculated from an image just prior to the burn and a second NBR is calculated for an image immediately following the burn. Burn extent and severity is judged by taking the difference between these two index layers:\n",
-    "\n",
-    "\n",
-    "$$ dNBR = NBR_{prefire} - NBR_{postfire} $$\n",
-    "\n",
-    "## BAIS2 - Burned Area Index for Sentinel-2\n",
-    "\n",
-    "BAIS2 adapts the traditional BAI for Sentinel-2 bands, taking advantage of the wider spectrum of Visible, Red-Edge, NIR and SWIR bands.\n",
-    "\n",
-    "Values description: The range of values for the BAIS2 is -1 to 1 for burn scars, and 1 - 6 for active fires. Different fire intensities may result in different thresholds, the current values were calibrates, as per original author, on mostly Mediterranen regions.\n",
-    "\n",
-    "$$ BAIS2 = \\left(1-\\sqrt{\\frac{B06*B07*B8A}{B4}}\\right) *\\left(\\frac{B12-B8A}{\\sqrt{B12+B8A}}+1\\right)$$\n",
-    "\n",
-    "## BRIGHTNESS\n",
-    "\n",
-    "Brightness provide complementary information improving the discrimination between crop and no-crop areas.\n",
-    "\n",
-    "$$ Brightness = \\sqrt{GREEN^{2}+RED^{2}+NIR^{2}+SWIR^{2}} = \\sqrt{B03^{2}+B04^{2}+B08^{2}+B11^{2}}$$\n",
-    "\n",
-    "## SWI - Surface Waterproofing Index\n",
-    "\n",
-    "SWI, based on NDVI and NDWI, is a useful tool for monitoring waterproofing.\n",
-    "\n",
-    "$$ SWI = (NDVI - NDWI)^2 $$\n",
-    "\n",
-    "Source : https://eos.com/make-an-analysis/index-stack/"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Spectral indices"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Rasterio : 1.1.0\n"
+      "All libraries successfully imported!\n"
      ]
     }
    ],
@@ -100,127 +25,160 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import rasterio\n",
-    "from rasterio import plot\n",
-    "from rasterio.plot import show\n",
     "from pathlib import Path\n",
     "\n",
-    "print(f'Rasterio : {rasterio.__version__}')"
+    "print('All libraries successfully imported!')"
    ]
   },
   {
-   "source": [
-    "## Set the work directory"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#computer_path = 'X:/'\n",
-    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
-    "grp_letter    = 'X'\n",
+    "**Set the index name you want to compute !**\n",
     "\n",
-    "# Directory for all work files\n",
-    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'"
+    "- NDVI\n",
+    "- NDWI\n",
+    "- NDSI\n",
+    "- BRIGHTNESS\n",
+    "- NBR\n",
+    "- BAIS2\n",
+    "- SWI"
    ]
   },
   {
-   "source": [
-    "## Choose the spectral index to compute "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "You chose to compute NDVI !\nYou need : ['B04', 'B08'] \n\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/\n"
+      "You chose to compute NDVI !\n"
      ]
     }
    ],
    "source": [
-    "# Set the index name you want to compute !\n",
-    "# ---------------------------------------- #\n",
-    "index_name   = 'NDVI'\n",
-    "# ---------------------------------------- #\n",
+    "index_name = 'NDVI'\n",
     "\n",
+    "nodata_val = -10000\n",
+    "\n",
+    "print(f'You chose to compute {index_name} !')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
+    "grp_letter    = 'X'\n",
+    "\n",
+    "# Directory for all work files\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
+    "\n",
+    "reflectance_path = f'{work_path}3_L2A_MASKED/'\n",
+    "\n",
+    "index_path = f'{work_path}{index_name}/'\n",
+    "\n",
+    "Path(index_path).mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **What do you need to compute the selected spectral indices ?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To compute NDVI you need : ['B04', 'B08']\n"
+     ]
+    }
+   ],
+   "source": [
     "if index_name == 'NDVI':\n",
     "    bands_needed = ['B04','B08']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'NDWI':\n",
     "    bands_needed = ['B08','B11']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'NDSI':\n",
     "    bands_needed = ['B03','B11']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'BRIGHTNESS':\n",
     "    bands_needed = ['B03','B04','B08','B11']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path,\n",
+    "                    reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'NBR':\n",
     "    bands_needed = ['B08','B12']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'BAIS2':\n",
     "    bands_needed = ['B04','B06','B07','B8A','B12']\n",
-    "    list_im_path = [f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/',\n",
-    "                    f'{work_path}3_L2A_MASKED/']\n",
+    "    list_im_path = [reflectance_path,\n",
+    "                    reflectance_path,\n",
+    "                    reflectance_path,\n",
+    "                    reflectance_path]\n",
     "\n",
     "elif index_name == 'SWI':\n",
     "    bands_needed = ['NDVI','NDWI']\n",
     "    list_im_path = [f'{work_path}NDVI/',\n",
     "                    f'{work_path}NDWI/']\n",
     "\n",
-    "print(f'You chose to compute {index_name} !')\n",
-    "print(f'You need : {bands_needed} \\n')\n",
     "\n",
-    "index_path = f'{work_path}{index_name}/'\n",
-    "\n",
-    "Path(index_path).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "print(f'Spectral index path is set to : {index_path}')"
+    "print(f'To compute {index_name} you need : {bands_needed}')"
    ]
   },
   {
-   "source": [
-    "## Check if you have the necessary spectral bands"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "**Check if you have the necessary spectral bands**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "We need band/index B04 to compute NDVI\n--> 2 images are found \n\nWe need band/index B08 to compute NDVI\n--> 2 images are found \n\nCheck if the number of images found for each band/index is the same !!\n"
+      "We need band/index B04 to compute NDVI\n",
+      "--> 12 images are found \n",
+      "\n",
+      "We need band/index B08 to compute NDVI\n",
+      "--> 12 images are found \n",
+      "\n",
+      "Check if the number of images found for each band/index is the same !!\n"
      ]
     }
    ],
@@ -237,32 +195,38 @@
    ]
   },
   {
-   "source": [
-    "## Compute Spectral Indices"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Compute spectral index selected for all images"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Date : 20170707\n",
-      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/T31UFS_20170707T104019_NDVI.tif\n",
-      "Date : 20200731\n",
-      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/T31UFS_20200731T103629_NDVI.tif\n"
+      "Date : 20200116\n",
+      "Date : 20200212\n",
+      "Date : 20200316\n",
+      "Date : 20200417\n",
+      "Date : 20200520\n",
+      "Date : 20200621\n",
+      "Date : 20200719\n",
+      "Date : 20200813\n",
+      "Date : 20200914\n",
+      "Date : 20201019\n",
+      "Date : 20201118\n",
+      "Date : 20201218\n",
+      "--> All NDVI are computed !\n"
      ]
     }
    ],
    "source": [
-    "nodata_val = -10000\n",
-    "\n",
-    "# Compute the SI for all dates\n",
     "for i in range(0,nb_im):\n",
     "    \n",
     "    im = sorted(glob.glob(f'{list_im_path[0]}*{bands_needed[0]}*.tif'))[i]\n",
@@ -356,83 +320,34 @@
     "\n",
     "        print(f'A new {index_name} file is created : {index_file}')\n",
     "    \n",
-    "    else:\n",
-    "        print(f'--> {index_file} - already exists')\n",
-    "        print('-------------------------------------------')\n",
-    "\n"
-   ]
-  },
-  {
-   "source": [
-    "## Compute difference between 2 spectral indices\n",
     "\n",
-    "### Set the output directory"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index_calc_path = f'{work_path}{index_name}_CALC/'\n",
-    "\n",
-    "Path(index_calc_path).mkdir(parents=True, exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "A new /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI_CALC/NDVI_20200731_MINUS_20170707.tif file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI_CALC/NDVI_20200731_MINUS_20170707.tif\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Choose the two dates you want to subtract\n",
-    "date_1 = '20170707'\n",
-    "date_2 = '20200731'\n",
-    "\n",
-    "# Get the spectral indices associated with the dates you have chosen\n",
-    "index_file_1 = glob.glob(f'{index_path}*{date_1}*.tif')[0]\n",
-    "index_file_2 = glob.glob(f'{index_path}*{date_2}*.tif')[0]\n",
-    "\n",
-    "# Name the output index file\n",
-    "index_file_diff = f'{index_calc_path}{index_name}_{date_2}_MINUS_{date_1}.tif'\n",
-    "\n",
-    "if not os.path.isfile(index_file_diff):\n",
-    "\n",
-    "    # Open the spectral index at date 1\n",
-    "    src = rasterio.open(index_file_1, 'r')\n",
-    "    profile = src.profile\n",
-    "    date_1_arr = src.read(1)\n",
-    "    src.close()\n",
-    "\n",
-    "    # Open the spectral index at date 2\n",
-    "    src = rasterio.open(index_file_2, 'r')\n",
-    "    date_2_arr = src.read(1)\n",
-    "    src.close()\n",
-    "\n",
-    "    # Compute the difference between date 2 and date 1\n",
-    "    diff_index = date_2_arr - date_1_arr\n",
-    "\n",
-    "    # Write the output in GeoTIFF\n",
-    "    dst = rasterio.open(index_file_diff, \"w\", **profile)\n",
-    "    dst.write(diff_index,1)\n",
-    "    dst.close()\n",
-    "    \n",
-    "    print(f'A new {index_file_diff} file is created : {index_file_diff}')\n",
-    "    \n",
-    "else:\n",
-    "    print(f'--> {index_file_diff} - already exists')\n"
+    "print(f'--> All {index_name} are computed !')\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
